--- a/HTML/Feb22/실습1.html
+++ b/HTML/Feb22/실습1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>카드 만들기</title>
+  <title>실습2</title>
   <div class = "card">
     <div class = "card-img">
       <img src="팀버너스리.png" alt="팀버너스리">
@@ -16,7 +16,7 @@
     --------------------------------------------------------------------------
     </em></h3>   
   </div>
-  <div type="card-main">
+  <div class="card-main">
     <p><span style="">1989년 월드 와이드 웹의 하이퍼텍스트 시스템을 고안하여 개발.</span>
       <span style="color:red;">웹의 아버지</span></p>        
     <p>국적 : 영국 </p>
@@ -49,7 +49,7 @@
     .card-main{
     height: 200px;
     font-size: 15px;
-    border-bottom: solid 1px black;   
+    text-decoration: underline;  
     margin-left: 50px;
     
     }      
