--- a/04_HTML_CSS/index.html
+++ b/04_HTML_CSS/index.html
@@ -27,7 +27,7 @@
 </body>
 </html>
 
-## body
+<!-- ## body
 #### 1. head는 글의 제목을 의미하는 태그다.
 ```html
 <h1></h1> # 대제목
@@ -77,6 +77,6 @@
 </head>
 <body>
     <p class="color-primary">I am red</p>
-  ```
-<!-- 참고) vs code에서 줄바꿈을 해도 웹브라우저에서는  차이가 없다.  -->
+  ``` 
+참고) vs code에서 줄바꿈을 해도 웹브라우저에서는  차이가 없다.  -->
 
