--- a/04_HTML_CSS/유튜브 개발자의 품격(한시간만에 끝내는 HTML+CSS 입문)/index.html
+++ b/04_HTML_CSS/유튜브 개발자의 품격(한시간만에 끝내는 HTML+CSS 입문)/index.html
@@ -25,10 +25,10 @@
 <!--표 만들기--><!--표 만들기--><!--표 만들기--><!--표 만들기--><!--표 만들기-->
     <table> 
         <thead class="tb-head">
-            <tr>  <!--하나의 행-->
-                <td>이름</td> <!--하나의 셀-->
+            <tr>  
+                <td>이름</td> 
                 <td>지역</td>
-                <td>전화번호0</td>                  
+                <td>전화번호</td>                  
             </tr>
         </thead>
         <tbody class="tb-body">
